--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,10 @@
             <param-value>utf-8</param-value>
         </init-param>
     </filter>
-
+    <filter>
+        <filter-name>hibernateFilter</filter-name>   
+         <filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>   
+    </filter> 
     <filter>
         <filter-name>hiddenHttpMethodFilter</filter-name>
         <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
@@ -22,11 +25,17 @@
         <filter-name>CharacterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
+    <filter-mapping>   
+         <filter-name>hibernateFilter</filter-name>   
+         <url-pattern>/*</url-pattern>   
+    </filter-mapping>  
     <filter-mapping>
         <filter-name>hiddenHttpMethodFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <listener>  
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>  
+    </listener>  
     <!-- 配置DispatchcerServlet -->
     <servlet>
         <servlet-name>springDispatcherServlet</servlet-name>
