--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,12 @@
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
     <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <display-name>SecurityFilter</display-name>
+        <description></description>
+        <filter-class>com.auuid.security.SecurityFilter</filter-class>
+    </filter>
+    <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
         <init-param>
@@ -24,6 +30,10 @@
         <filter-name>hiddenHttpMethodFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <filter-mapping>
+    	<filter-name>SecurityFilter</filter-name>
+    	<url-pattern>/SecurityFilter</url-pattern>
+    </filter-mapping>
     <!-- 配置DispatchcerServlet -->
     <servlet>
         <servlet-name>springDispatcherServlet</servlet-name>
@@ -39,7 +49,6 @@
         <servlet-name>springDispatcherServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
-    </filter-mapping>
     <welcome-file-list>
         <welcome-file>index</welcome-file>
     </welcome-file-list>
