--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,7 +32,7 @@
     </filter-mapping>
     <filter-mapping>
     	<filter-name>SecurityFilter</filter-name>
-    	<url-pattern>/SecurityFilter</url-pattern>
+    	<url-pattern>/service/*</url-pattern>
     </filter-mapping>
     <!-- 配置DispatchcerServlet -->
     <servlet>
