--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.16</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20151123</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>allInOne</finalName>
